Renamed "Any" to "All"

--- a/search/templates/search/base_generic.html
+++ b/search/templates/search/base_generic.html
@@ -69,7 +69,7 @@
     <form style="padding-bottom: 50px;" action="{% url 'search:results' %}" method="get">
         <select name="dropdown">
             {% block category %}            
-            <option value="" selected hidden>Any</option>
+            <option value="" selected hidden>All</option>
             <option value="Bathroom">Bathroom</option>
             <option value="Garbage">Garbage</option>
             <option value="Medical Waste">Medical Waste</option>
