--- a/search/templates/search/search_results.html
+++ b/search/templates/search/search_results.html
@@ -22,7 +22,7 @@
         <div class="row">
             <div class="col-sm-3">
                 <a href="{% url 'search:report_detail' issue.pk %}" target="_blank">
-                    <img src="../{{ issue.image.url }}" class="img-thumbnail"/></a>
+                    <img src="../{{ issue.thumbnail.url }}" class="img-thumbnail"/></a>
             </div>
             <div class="col-sm-4">
                 <h5 class="my-6">Park Information</h5>
