Edit homepage, report page

--- a/search/templates/search/base_generic.html
+++ b/search/templates/search/base_generic.html
@@ -1,93 +1,114 @@
 {% load static %}
-<center>SFSU Software Engineering Project, Spring 2018</center>
+<br>
+<center>SFSU Software Engineering Project, Spring 2018</center><br>
 
 <!DOCTYPE html>
 <html lang="en">
 
+<title>Park Go Green</title>
+
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=yes">
+<meta name="description" content="">
+<meta name="author" content="">
 <link rel="stylesheet" type="text/css" href="{% static 'search/style.css' %}"/>
 <link rel="stylesheet" type="text/css" href="{% static 'search/bootstrap.min.css' %}"/>
-
 <!--<link rel="stylesheet" type="text/css" href="{% static 'search/modern-business.css' %}" />-->
-<a href="{% url 'search:index' %}"><img src="{% static "search/Park Go Green.png" %}" style="float: left"/></a>
-<div class="container">
 
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-116677924-1"></script>
+<script>
+    window.dataLayer = window.dataLayer || [];
 
-    <div class="row" style="float: right">
-{#        <form>#}
-{#            <div class="form-group">#}
-{#                <label for="exampleInputEmail1">Username</label>#}
-{#                <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"#}
-{#                       placeholder="Enter username">#}
-{#                <button type="submit" class="btn btn-default">Submit</button>#}
-{#            </div>#}
-{##}
-{#        </form>#}
-{#        <form>#}
-{#            <div class="form-group">#}
-{#                <label for="exampleInputPassword1">Password</label>#}
-{#                <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">#}
-{#            </div>#}
-{##}
-{#        </form>#}
+    function gtag() {
+        dataLayer.push(arguments);
+    }
 
-        {% if user.is_authenticated %}
-            <a href="{% url 'logout' %}">Logout</a>
-        {% else %}
-            <a href="{% url 'login' %}">Login</a>
-        {% endif %}
-        <a href="{% url 'search:signup' %}">Sign Up</a>
-    </div>
-</div>
+    gtag('js', new Date());
 
+    gtag('config', 'UA-116677924-1');
+</script>
+
+<style>
+    p {
+        font-size: larger;
+    }
+
+    .nav-link1 {
+        display: block;
+        padding: 10px 25px 10px 25px;
+        margin-right: 15px;
+        border: 2px solid #14aa75;
+        border-radius: 3px;
+        color: #14aa75;
+        float: right;
+    }
+
+    .nav-link1:hover, .nav-link1:focus {
+        text-decoration: none;
+        color: #ffffff;
+        background-color: #14aa75;
+    }
+
+    .container-fluid {
+        padding-bottom: 50px;
+    }
+
+    .form-row {
+        margin-left: 250px;
+    }
+</style>
 
 <head>
 
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <!-- Header template for every pages -->
+    <div class="container-fluid">
+        <div class="">
+            <a href="{% url 'search:index' %}"><img src="{% static "search/Park Go Green.png" %}" style="float: left"/></a>
+        </div>
 
-        <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-116677924-1"></script>
-    <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag(){dataLayer.push(arguments);}
-        gtag('js', new Date());
+        <div class="row" style="float: right">
+            {% if user.is_authenticated %}
+                <a class="nav-link1" href="{% url 'logout' %}">Logout</a>
+            {% else %}
+                <a class="nav-link1" href="{% url 'login' %}">Login</a>
+            {% endif %}
+            <a class="nav-link1" href="{% url 'search:signup' %}">Sign Up</a>
+        </div>
 
-        gtag('config', 'UA-116677924-1');
-    </script>
+        <center>
+            {% if error %}
+                <p>{{ error }}</p>
+            {% endif %}
 
-    <title>Park Go Green</title>
+            <form class="form-row" style="padding-bottom: 50px;" action="{% url 'search:results' %}" method="get">
+                <select name="dropdown">
+                    <option value="" selected hidden>Search by category</option>
+                    <option value="Bathroom">Bathroom</option>
+                    <option value="Garbage">Garbage</option>
+                    <option value="Medical Waste">Medical Waste</option>
+                    <option value="Oil Spill">Oil Spill</option>
+                    <option value="Other">Other</option>
+                </select>
+                <input type="text" name="q" style="padding: 0px 10px 0px " placeholder="City, Park, ZIP"
+                       autocomplete="off">
+                <button type="submit" class="btn btn-success">Search</button>
+            </form>
 
+        </center>
+
+        <center style="padding-bottom: 10px"> Our website is dedicated to solving any and all environmental issues in
+            your local
+            parks!
+        </center>
+    </div>
+    <!-- End of Header template for every pages -->
 
 </head>
-<h1 class="my-4"></h1>
-<center>
-    {% if error %}
-        <p>{{ error }}</p>
-    {% endif %}
-    <form style="padding-bottom: 50px;" action="{% url 'search:results' %}" method="get">
-        <select name="dropdown">
-            <option value="" selected hidden>Select a category</option>
-            <option value="Bathroom">Bathroom</option>
-            <option value="Garbage">Garbage</option>
-            <option value="Medical Waste">Medical Waste</option>
-            <option value="Oil Spill">Oil Spill</option>
-            <option value="Other">Other</option>
-        </select>
-        <input type="text" name="q" placeholder="Search by park name" autocomplete="off">
-        <input type="submit" value="Search" class="btn btn-default">
-    </form>
-</center>
-
-<center style="padding-bottom: 10px"> Our website is dedicated to solving any and all environmental issues in your local
-    parks!
-</center>
 
 <body>
 
-
-<!-- Navigation -->
+<!-- Navigation bar-->
 <nav class="navbar-expand-lg navbar-dark bg-dark navbar-default">
     <div class="container">
 
@@ -113,8 +134,8 @@
 
     </div>
 </nav>
+
 {% block content %}{% endblock %}
 
 </body>
-
 </html>
