--- a/search/templates/search/homepage.html
+++ b/search/templates/search/homepage.html
@@ -1,56 +1,49 @@
 {% extends "search/base_generic.html" %}
 
 {% block content %}
-<!-- Page Content -->
+    <!-- Page Content -->
 
+    <div class="container">
+    <!-- Recent Reports Section -->
+    <h2 class="my-4" style="padding: 10px;"> Recent Listings</h2><hr>
 
-<!-- Portfolio Section -->
-<h2 style="padding: 50px;"> Recent Listings</h2>
+        {% for report in latest %}
+            <div class="row">
 
+                <div class="col-3">
+                    <a href="{% url 'search:report_detail' report.pk %}" target="_blank">
+                        <img src="../{{ report.thumbnail.url }}" class="img-thumbnail"/></a>
+                </div>
+                <div class="col-4">
+                    <h3 class="">Park Information</h3>
+                    <br>
+                    <p> Park: <strong>{{ report.park }}</strong></p>
+                    <p> Date: <strong>{{ report.sub_date }}</strong></p>
+                    <p> Category: <strong>{{ report.type }}</strong></p>
+                    <p> Issue: <strong>{{ report.description }}</strong></p>
+                </div>
 
-<div class="row">
-
-    {% for report in latest %}
-    <section>
-        <div class="container" style="padding-bottom: 40px">
-            <div class="card" style="width: 80%;">
-                <div class="row">
-                    <div class="col-md-6">
-                        <div style="float: left;" class="card-img-bottom">
-                            <img class="card-img-top" src="../{{ report.thumbnail.url }}" alt="">
-                        </div>
-                    </div>
-                    <div class="col-md-6">
-                        <div class="card-block">
-                            <h4 class="card-title"></h4>
-                            <p class="card-text">Subject: {{ report.type }}</p>
-                            <p class="card-text">Location: {{ report.park }}</p>
-                            <a href="{% url 'search:report_detail' report.pk %}" class="btn btn-dark">Read More</a>
-                        </div>
-                    </div>
+                <div class="col-4">
+                    <iframe width="310" height="220" frameborder="0" style="border:0"
+                            src="{{ report.park.maps_string }}" allowfullscreen>
+                    </iframe>
                 </div>
             </div>
-        </div>
-    </section>
-    {% endfor %}
-
-</div>
-<!-- /.row -->
-
-
-<hr>
-
-
-<!-- Footer -->
-<footer class="py-5 bg-dark">
-    <div class="container">
-        <p class="m-0 text-center text-white">Copyright &copy; Your Website 2018</p>
+            <!-- /.row -->
+            <hr>
+        {% endfor %}
     </div>
-    <!-- /.container -->
-</footer>
 
-<!-- Bootstrap core JavaScript -->
-<script src="vendor/jquery/jquery.min.js"></script>
-<script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <!-- Footer -->
+    <footer class="py-5 bg-dark">
+        <div class="container">
+            <p class="m-0 text-center text-white">Copyright &copy; Your Website 2018</p>
+        </div>
+        <!-- /.container -->
+    </footer>
+
+    <!-- Bootstrap core JavaScript -->
+    <script src="vendor/jquery/jquery.min.js"></script>
+    <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
 {% endblock %}
