--- a/search/templates/search/report_detail.html
+++ b/search/templates/search/report_detail.html
@@ -2,56 +2,49 @@
 
 {% block content %}
 
-
-<div class="container">
-
-    <!-- Portfolio Item Heading -->
-    <h1 class="my-4">Report</h1>
-
-    <!-- Portfolio Item Row -->
-    <div class="row">
-
-        <div class="col-md-4">
-            <a href="../{{ report.image.url }}"><img class="img-fluid" src="../{{ report.image.url }}" alt=""></a>
-        </div>
-
-        <div class="col-md-8">
-
-            <h3 class="my-6" style="padding-bottom: 20px">Park Information</h3>
-            <ul>
-                <div class="row">
-                    <div class="col">
-                        <li style="padding-right: 100px"><p>Park: {{ report.park.name }}</p></li>
-                        <li style="padding-right: 100px"><p>Submission date: {{ report.sub_date }}</p></li>
-                    </div>
-                    <div class="col">
-                        <li style="padding-right: 100px"><p>Issue: {{ report.description }}</p></li>
-                        <li style="padding-right: 100px"><p>Category: {{ report.type }}</p></li>
-                    </div>
-                </div>
-
-            </ul>
-        </div>
-
-    </div>
-
-    <h3 class="my-3">Details</h3>
-    <p style="padding-bottom: 50px">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio,
-        gravida pellentesque
-        urna varius vitae. Sed dui lorem, adipiscing in adipiscing et, interdum nec metus. Mauris ultricies,
-        justo eu convallis placerat, felis enim.</p>
-    <!-- /.row -->
-
-    <!-- Related Projects Row -->
-
-</div>
-<!-- /.row -->
-
-<footer class="py-5 bg-dark">
     <div class="container">
-        <p class="m-0 text-center text-white">Copyright &copy; Your Website 2018</p>
+
+        <!-- Report Header -->
+        <h1 class="my-4">Report</h1>
+        <hr>
+        <!-- Report details -->
+        <div class="row">
+            <div class="col-3">
+                <a href="../{{ report.image.url }}"><img class="img-thumbnail" src="../{{ report.image.url }}" alt=""></a>
+            </div>
+            <div class="col-5">
+                <h3 class="" style="padding-bottom: 20px">Park Information</h3>
+                <ul>
+                    <li style=""><p>Park: <strong>{{ report.park.name }}</strong></p></li>
+                    <li style=""><p>Submission date: <strong>{{ report.sub_date }}</strong></p></li>
+                    <li style=""><p>Category: <strong>{{ report.type }}</strong></p></li>
+                    <li style=""><p>Issue: <strong>{{ report.description }}</strong></p></li>
+                </ul>
+            </div>
+            <div class="col-3">
+                <iframe width="450" height="400" frameborder="0" style="border:0"
+                        src="{{ report.park.maps_string }}" allowfullscreen>
+                </iframe>
+            </div>
+
+        </div>
+        <!-- /.row -->
+        <hr>
+
+        <h3 class="my-3">Details</h3>
+        <p style="padding-bottom: 50px">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod
+            odio,
+            gravida pellentesque
+            urna varius vitae. Sed dui lorem, adipiscing in adipiscing et, interdum nec metus. Mauris ultricies,
+            justo eu convallis placerat, felis enim.</p>
+
     </div>
     <!-- /.container -->
-</footer>
+
+    <footer class="py-5 bg-dark">
+        <div class="container">
+            <p class="m-0 text-center text-white">Copyright &copy; Your Website 2018</p>
+        </div>
+    </footer>
 
 {% endblock %}
