--- a/search/templates/search/base_generic.html
+++ b/search/templates/search/base_generic.html
@@ -64,7 +64,7 @@
     <!-- Header template for every pages -->
     <div class="container-fluid">
         <div class="">
-            <a href="{% url 'search:index' %}"><img src="{% static "search/Park Go Green.png" %}" style="float: left"/></a>
+            <a href="{% url 'search:index' %}"><img src="{% static "search/Park Report.png" %}" style="float: left"/></a>
         </div>
 
         <div class="row" style="float: right">
