--- a/search/templates/search/base_generic.html
+++ b/search/templates/search/base_generic.html
@@ -97,9 +97,9 @@
                             <option value="Other">Other</option>
                         </select>
                     </div>
-                    <input type="text" class="form-control" name="x" placeholder="Search term...">
+                    <input type="text" class="form-control" name="x" placeholder="Search by park name">
                     <span class="input-group-btn">
-                            <input type="submit" value="Search" class="btn btn-default">
+                            <input type="submit" value="Search" class="btn btn-outline-dark">
                            <span class="glyphicon glyphicon-search"></span>
 
                     </span>
