Title Name Change

--- a/search/templates/search/base_generic.html
+++ b/search/templates/search/base_generic.html
@@ -1,11 +1,10 @@
 {% load static %}
-<br>
-<center>SFSU Software Engineering Project, Spring 2018</center><br>
+<br><center>SFSU Software Engineering Project, Spring 2018</center><br>
 
 <!DOCTYPE html>
 <html lang="en">
 
-<title>Park Go Green</title>
+<title>Park Report</title>
 
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=yes">
