--- a/search/templates/search/signup.html
+++ b/search/templates/search/signup.html
@@ -13,42 +13,67 @@
     <style>
         body {
             color: #fff;
-            background: #19aa8d;
             font-family: 'Roboto', sans-serif;
             text-align: center;
-
         }
 
-        .container{
+        .container {
             text-align-all: center;
+            background-color: #2daa6b;
         }
 
     </style>
 
 </head>
 
-<body>
 {% block content %}
 
+    <body>
     <div class="container">
-        <h3>Sign up</h3>
-        <p>Please fill in this form to create an account!</p>
-        <hr>
-        <div class="form-group">
-            <form method="post">
-                {% csrf_token %}
-                {{ form.as_p }}
+        <div class="row">
+            <div class="col-2">
 
+            </div>
+
+            <div class="col-7"
+                 style="margin: 30px 0px 30px 0px; padding:20px 20px 50px 20px; background-color: rgba(185,187,190,0.19)">
+                <h3 class="text-center">Registration</h3>
+                <p>Please fill in this form to create an account!</p>
+                <hr>
                 <div class="form-group">
-                    <label class="checkbox-inline"><input type="checkbox" required="required"> I accept the <a href="#">Terms
-                        of Use</a> &amp; <a href="#">Privacy Policy</a></label>
+                    <form method="post">
+                        {% csrf_token %}
+                        {{ form.as_p }}
+                        <medium id="emailHelp" class="form-text text-muted">- Password can't be too similar to your
+                            other personal information.
+                        </medium>
+                        <medium id="emailHelp" class="form-text text-muted">- Password must contain at least 8
+                            characters.
+                        </medium>
+                        <medium id="emailHelp" class="form-text text-muted">- Password can't be a commonly used
+                            password.
+                        </medium>
+                        <medium id="emailHelp" class="form-text text-muted">- Password can't be entirely numeric.
+                        </medium>
+                        <br>
+                        <div class="form-group">
+                            <label class="checkbox-inline"><input type="checkbox" required="required"> I accept the <a
+                                    href="#">Terms of Use</a> &amp; <a href="#">Privacy Policy</a></label>
+                        </div>
+                        <a href="{% url 'search:index' %}" class="btn btn-outline-secondary" role="button"
+                           aria-pressed="true" style="margin-left: 180px">Cancel</a>
+                        <button type="submit" class="btn btn-success">Sign up</button>
+                    </form>
                 </div>
-                <button type="submit" class="btn btn-success">Sign up</button>
-            </form>
-        </div>
-        <div class="text-center">Already have an account? <a href="{% url 'login' %}">Login here</a></div>
-    </div>
+                <hr>
+                <div class="text-center">Already have an account? <a href="{% url 'login' %}">Login here</a></div>
+            </div>
+            <div class="col-2">
 
+            </div>
+        </div>
+    </div>
+    </body>
 {% endblock %}
-</body>
+
 </html>
