--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -8,8 +8,8 @@
 
             </div>
 
-            <div class="col-5"
-                 style="margin: 30px 0px 30px 0px; padding:20px 50px 150px 50px; text-align:right;background-color: rgba(185,187,190,0.19)">
+            <div class="col-5" style="margin: 30px 0px 30px 0px; padding:50px 50px 150px 50px; text-align:right;background-color: rgba(185,187,190,0.19)">
+            <h3 class="text-center">Login</h3><hr>
                 {% if form.errors %}
                     <p class="text-center">Your username and password didn't match. Please try again.</p>
                 {% endif %}
@@ -25,7 +25,7 @@
 
                 <form method="post" action="{% url 'login' %}">
                     {% csrf_token %}
-
+<hr>
                     <div>
                         <td>{{ form.username.label_tag }}</td>
                         <td>{{ form.username }}</td>
