--- a/search/templates/search/post_report.html
+++ b/search/templates/search/post_report.html
@@ -2,10 +2,10 @@
 
 {% block content %}
     <h2>Post Report</h2>
-    <form method="post">
+    <form method="post" class="post-form" enctype="multipart/form-data">
         {% csrf_token %}
         {{ form.as_p }}
-        <button type="submit">Submit</button>
+        <button type="submit" class="save btn btn-default">Submit</button>
     </form>
 
 {% endblock %}
