--- a/search/templates/search/post_report.html
+++ b/search/templates/search/post_report.html
@@ -2,6 +2,9 @@
 
 {% block content %}
     <h2>Post Report</h2>
+    {% if not user.is_authenticated %}
+        <p>Please sign in or register to be able to post reports.</p>
+    {% endif %}
     <form method="post" class="post-form" enctype="multipart/form-data">
         {% csrf_token %}
         {{ form.as_p }}
