Added zip code to model, search by exact zip code now

--- a/search/templates/search/search_results.html
+++ b/search/templates/search/search_results.html
@@ -18,7 +18,7 @@
         <p>You searched for: <strong>{{ query }}</strong></p>
     {% endif %}
     {% if is_reports %}
-        <p>We have found <strong style="color: darkcyan">{{ reports|length }} park{{ reports|pluralize }}</strong> from
+        <p>We have found <strong style="color: darkcyan">{{ reports|length }} report{{ reports|pluralize }}</strong> from
             your search.</p>
     {% else %}
         <p>No park matches your search criteria, here are reports that share a category.</p><hr>
