Specified park name or zip code only

--- a/search/templates/search/base_generic.html
+++ b/search/templates/search/base_generic.html
@@ -92,7 +92,7 @@
                     <option value="Other">Other</option>
                     {% endblock %}
                 </select>
-                <input type="text" name="q" style="padding: 0px 10px 0px " placeholder="City, Park, ZIP"
+                <input type="text" name="q" style="padding: 0px 10px 0px " placeholder="Park name or Zip Code"
                        autocomplete="off" value="{% block query %}{% endblock %}">
                 <div class="input-group-btn">
                     <button type="submit" class="btn btn-success">Search</button>
