--- a/search/templates/search/post_report.html
+++ b/search/templates/search/post_report.html
@@ -1,14 +1,29 @@
 {% extends "search/base_generic.html" %}
 
 {% block content %}
-    <h2>Post Report</h2>
-    {% if not user.is_authenticated %}
-        <p>Please sign in or register to be able to post reports.</p>
-    {% endif %}
-    <form method="post" class="post-form" enctype="multipart/form-data">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <button type="submit" class="save btn btn-default">Submit</button>
-    </form>
+
+    <div class="container">
+        <div class="row">
+            <div class="col-2">
+
+            </div>
+
+            <div class="col-7">
+                <h2 class="text-center">Post Report</h2>
+                {% if not user.is_authenticated %}
+                    <p>Please sign in or register to be able to post reports.</p><hr>
+                {% endif %}
+                <form method="post" class="post-form" enctype="multipart/form-data">
+                    {% csrf_token %}
+                    {{ form.as_p }}
+                    <button type="submit" class="btn btn-success">Submit</button>
+                </form>
+            </div>
+
+            <div class="col-3">
+
+            </div>
+        </div>
+    </div>
 
 {% endblock %}
