Changed all to All Categories, should be in order in menu

--- a/search/templates/search/base_generic.html
+++ b/search/templates/search/base_generic.html
@@ -84,7 +84,7 @@
             <form class="form-row" style="padding-bottom: 50px;" action="{% url 'search:results' %}" method="get">
                 <select name="dropdown">
                     {% block category %}
-                    <option value="All" selected>All</option>
+                    <option value="All Categories" selected>All Categories</option>
                     <option value="Bathroom">Bathroom</option>
                     <option value="Garbage">Garbage</option>
                     <option value="Medical Waste">Medical Waste</option>
