--- a/search/templates/search/base_generic.html
+++ b/search/templates/search/base_generic.html
@@ -14,6 +14,7 @@
 <link rel="stylesheet" type="text/css" href="{% static 'search/bootstrap.min.css' %}"/>
 <!--<link rel="stylesheet" type="text/css" href="{% static 'search/modern-business.css' %}" />-->
 
+
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-116677924-1"></script>
 <script>
@@ -69,16 +70,16 @@
 
         <div class="row" style="float: right">
             {% if user.is_authenticated %}
-            <a class="nav-link1" href="{% url 'logout' %}">Logout</a>
+                <a class="nav-link1" href="{% url 'logout' %}">Logout</a>
             {% else %}
-            <a class="nav-link1" href="{% url 'login' %}">Login</a>
+                <a class="nav-link1" href="{% url 'login' %}">Login</a>
+                <a class="nav-link1" href="{% url 'search:signup' %}">Sign Up</a>
             {% endif %}
-            <a class="nav-link1" href="{% url 'search:signup' %}">Sign Up</a>
         </div>
 
         <center>
             {% if error %}
-            <p>{{ error }}</p>
+                <p>{{ error }}</p>
             {% endif %}
 
 
@@ -91,6 +92,12 @@
     </div>
     <!-- End of Header template for every pages -->
 
+
+<!-- jQuery library -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+
+<!-- Latest compiled JavaScript -->
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
 
 <body>
@@ -100,7 +107,7 @@
     <div class="container">
 
         <button class="navbar-toggler navbar-toggler-left" type="button" data-toggle="collapse"
-                data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false"
+                data-target="#navbarResponsive" aria-controls="#navbarResponsive" aria-expanded="false"
                 aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -113,7 +120,7 @@
                     <a class="btn btn-dark btn-lg" class="nav-link" href="{% url 'search:postnew' %}">Post Report</a>
                 </li>
 
-                <form class="form-row" style="padding-top: 10px" action="{% url 'search:results' %}" method="get">
+                <form class="navbar-form form-row" style="padding-top: 10px" action="{% url 'search:results' %}" method="get">
                     <select name="dropdown">
                         {% block category %}
                         <option value="All Categories" selected>All Categories</option>
