--- a/search/templates/search/search_results.html
+++ b/search/templates/search/search_results.html
@@ -34,8 +34,10 @@
     {% for issue in reports %}
         <div class="row">
             <div class="col-3">
-                <a href="{% url 'search:report_detail' issue.pk %}" target="_blank">
-                    <img src="../{{ issue.thumbnail.url }}" class="img-thumbnail"/></a>
+                {% if issue.thumbnail %}
+                    <a href="{% url 'search:report_detail' issue.pk %}" target="_blank">
+                        <img src="../{{ issue.thumbnail.url }}" class="img-thumbnail"/></a>
+                {% endif %}
             </div>
             <div class="col-4">
                 <p>Park: <strong>{{ issue.park.name }}</strong></p>
