--- a/search/templates/search/report_detail.html
+++ b/search/templates/search/report_detail.html
@@ -1,6 +1,7 @@
 {% extends "search/base_generic.html" %}
-
+{% load auth_extras %}
 {% block content %}
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" />
 
     <div class="container">
 
@@ -22,6 +23,19 @@
                     <li style=""><p>Category: <strong>{{ report.type }}</strong></p></li>
                     <li style=""><p>Status: <strong>{{ report.status }}</strong></p></li>
                 </ul>
+                {% if request.user|has_group:"City Manager" %}
+                    <ul>
+                        <a href="{% url 'search:report_update' report.pk %}">Update</a>
+                        <form action="{% url 'search:report_delete' report.id %}" method="post" style="display: inline">
+                            {% csrf_token %}
+                            <input type = "hidden" name="report_id" value="{{ report.id }}"/>
+                            <button type="submit" class="btn btn-default btn-sm">
+                                <span class="glyphicon glyphicon-trash"></span>
+                            </button>
+                        </form>
+
+                    </ul>
+                {% endif %}
             </div>
             <div class="col-3">
                 <iframe width="450" height="400" frameborder="0" style="border:0"
