--- a/search/templates/search/base_generic.html
+++ b/search/templates/search/base_generic.html
@@ -1,6 +1,5 @@
 {% load static %}
 {% load auth_extras %}
-<br><center>SFSU Software Engineering Project, Spring 2018</center><br>
 
 <!DOCTYPE html>
 <html lang="en">
@@ -12,8 +11,7 @@
 <meta name="description" content="">
 <meta name="author" content="">
 <link rel="stylesheet" type="text/css" href="{% static 'search/style.css' %}"/>
-<link rel="stylesheet" type="text/css" href="{% static 'search/bootstrap.min.css' %}"/>
-<!--<link rel="stylesheet" type="text/css" href="{% static 'search/modern-business.css' %}" />-->
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
 
 
 <!-- Global site tag (gtag.js) - Google Analytics -->
@@ -30,34 +28,11 @@
     gtag('config', 'UA-116677924-1');
 </script>
 
-<style>
-    p {
-        font-size: larger;
-    }
-
-    .nav-link1 {
-        display: block;
-        padding: 10px 25px 10px 25px;
-        margin-right: 15px;
-        border: 2px solid #14aa75;
-        border-radius: 3px;
-        color: #14aa75;
-        float: right;
-    }
-
-    .nav-link1:hover, .nav-link1:focus {
-        text-decoration: none;
-        color: #ffffff;
-        background-color: #14aa75;
-    }
-
-
-    .form-row {
-        margin-left: 250px;
-    }
-</style>
-
 <head>
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
+
 
     <!-- Header template for every pages -->
     <div class="container-fluid">
@@ -67,82 +42,123 @@
                     style="float: left"/></a>
             </div>
 
-            <div class="col-sm"><p>Our website is dedicated to solving any and all environmental issues in your
+            <div class="col-sm">
+                SFSU Software Engineering Project, Spring 2018<br>
+                <p>Our website is dedicated to solving any and all environmental issues in your
                 local parks!</p>
                 {% if error %}
                     <p>{{ error }}</p>
                 {% endif %}
             </div>
-
-            <div class="col-sm">
-                {% if user.is_authenticated %}
-                    <a class="nav-link1" href="{% url 'logout' %}">Logout</a>
-                {% else %}
-                    <a class="nav-link1" href="{% url 'login' %}">Login</a>
-                    <a class="nav-link1" href="{% url 'search:signup' %}">Sign Up</a>
-                {% endif %}
-            </div>
+            <div class="col-sm"></div>
         </div>
     </div>
     <!-- End of Header template for every pages -->
 
 
-<!-- jQuery library -->
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
-<!-- Latest compiled JavaScript -->
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
 
 <body>
 
 <!-- Navigation bar-->
-<nav class="navbar-expand-lg navbar-dark bg-dark navbar-default">
-    <div class="container">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark justify-content-between">
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
 
-        <button class="navbar-toggler navbar-toggler-left" type="button" data-toggle="collapse"
-                data-target="#navbarResponsive" aria-controls="#navbarResponsive" aria-expanded="false"
-                aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarResponsive">
-            <ul class="navbar-nav" style="">
-                <li class="nav-item">
-                    <a class="btn btn-dark btn-lg" class="nav-link" href="about.html">About</a>
-                </li>
-                <li class="nav-item">
-                    <a class="btn btn-dark btn-lg" class="nav-link" href="{% url 'search:postnew' %}">Post Report</a>
-                </li>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav">
+            <li class="nav-item">
+                <a class="nav-link" href="{% url 'search:index' %}">Home <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">About</a>
+            </li><li class="nav-item">
+                <a class="nav-link" href="{% url 'search:postnew' %}">Post Report</a>
+            </li>
             {% if request.user|has_group:"City Manager" %}
-                <li class="nav-item">
-                    <a class="btn btn-dark btn-lg" class="nav-link" href="{% url 'search:dashboard' %}">Dashboard</a>
+                </li><li class="nav-item">
+                    <a class="nav-link" href="{% url 'search:dashboard' %}">Dashboard</a>
                 </li>
             {% endif %}
 
-                <form class="form-row" style="padding-top: 10px" action="{% url 'search:results' %}" method="get">
-                    <select name="dropdown">
-                        {% block category %}
+        </ul>
+        <form class="form-inline my-2 my-lg-0 mx-auto d-block" action="{% url 'search:results' %}">
+                <select name="dropdown" class="form-control" id="sel1">
+                    {% block category %}
                         <option value="All Categories" selected>All Categories</option>
                         <option value="Bathroom">Bathroom</option>
                         <option value="Garbage">Garbage</option>
                         <option value="Medical Waste">Medical Waste</option>
                         <option value="Oil Spill">Oil Spill</option>
                         <option value="Other">Other</option>
-                        {% endblock %}
-                    </select>
-                    <input type="text" name="q" style="padding: 0px 10px 0px " placeholder="Park name or Zip Code"
-                           autocomplete="off" value="{% block query %}{% endblock %}">
-                    <div class="input-group-btn">
-                        <button type="submit" class="btn btn-success">Search</button>
-                    </div>
-                </form>
+                    {% endblock %}
+                </select>
 
+            <input class="form-control mr-sm-2" name="q" type="search" placeholder="Park name or zip code"
+                   value="{% block query %}{% endblock %}" aria-label="Search">
+            <button class="btn btn-success my-2 my-sm-0" type="submit">Search</button>
+        </form>
 
-            </ul>
-        </div>
+        <ul class="nav navbar-nav ml-auto">
+            {% if user.is_authenticated %}
+                <li class="nav-item"><a class="nav-link" href="{% url 'logout' %}">Logout</a></li>
+            {% else %}
+                <li class="nav-item"><a class="nav-link" href="{% url 'login' %}">Login</a></li>
+                <li class="nav-item"><a class="nav-link" href="{% url 'search:signup' %}">Sign Up</a></li>
+            {% endif %}
+        </ul>
 
     </div>
 </nav>
+
+{#<nav class="navbar-expand-lg navbar-dark bg-dark navbar-default">#}
+{#    <div class="container">#}
+{##}
+{#        <button class="navbar-toggler navbar-toggler-left" type="button" data-toggle="collapse"#}
+{#                data-target="#navbarResponsive" aria-controls="#navbarResponsive" aria-expanded="false"#}
+{#                aria-label="Toggle navigation">#}
+{#            <span class="navbar-toggler-icon"></span>#}
+{#        </button>#}
+{#        <div class="collapse navbar-collapse" id="navbarResponsive">#}
+{#            <ul class="navbar-nav" style="">#}
+{#                <li class="nav-item">#}
+{#                    <a class="btn btn-dark btn-lg" class="nav-link" href="about.html">About</a>#}
+{#                </li>#}
+{#                <li class="nav-item">#}
+{#                    <a class="btn btn-dark btn-lg" class="nav-link" href="{% url 'search:postnew' %}">Post Report</a>#}
+{#                </li>#}
+{#            {% if request.user|has_group:"City Manager" %}#}
+{#                <li class="nav-item">#}
+{#                    <a class="btn btn-dark btn-lg" class="nav-link" href="{% url 'search:dashboard' %}">Dashboard</a>#}
+{#                </li>#}
+{#            {% endif %}#}
+{##}
+{#                <form class="form-row" style="padding-top: 10px" action="{% url 'search:results' %}" method="get">#}
+{#                    <select name="dropdown">#}
+{#                        {% block category %}#}
+{#                        <option value="All Categories" selected>All Categories</option>#}
+{#                        <option value="Bathroom">Bathroom</option>#}
+{#                        <option value="Garbage">Garbage</option>#}
+{#                        <option value="Medical Waste">Medical Waste</option>#}
+{#                        <option value="Oil Spill">Oil Spill</option>#}
+{#                        <option value="Other">Other</option>#}
+{#                        {% endblock %}#}
+{#                    </select>#}
+{#                    <input type="text" name="q" style="padding: 0px 10px 0px " placeholder="Park name or Zip Code"#}
+{#                           autocomplete="off" value="{% block query %}{% endblock %}">#}
+{#                    <div class="input-group-btn">#}
+{#                        <button type="submit" class="btn btn-success">Search</button>#}
+{#                    </div>#}
+{#                </form>#}
+{##}
+{##}
+{#            </ul>#}
+{#        </div>#}
+{##}
+{#    </div>#}
+{#</nav>#}
 
 {% block content %}{% endblock %}
 
