--- a/search/templates/search/post_report.html
+++ b/search/templates/search/post_report.html
@@ -1,29 +1,40 @@
 {% extends "search/base_generic.html" %}
+{% load bootstrap %}
 
 {% block content %}
-
     <div class="container">
-        <div class="row">
-            <div class="col-2">
-
+        <form role="form">
+            <legend>Post a new report</legend>
+            {% csrf_token %}
+            {{ form|bootstrap }}
+            <div class="form-group">
+                <button type="submit" class="btn btn-success">Submit</button>
             </div>
-
-            <div class="col-7">
-                <h2 class="text-center">Post Report</h2>
-                {% if not user.is_authenticated %}
-                    <p>Please sign in or register to be able to post reports.</p><hr>
-                {% endif %}
-                <form method="post" class="post-form" enctype="multipart/form-data">
-                    {% csrf_token %}
-                    {{ form.as_p }}
-                    <button type="submit" class="btn btn-success">Submit</button>
-                </form>
-            </div>
-
-            <div class="col-3">
-
-            </div>
-        </div>
+        </form>
     </div>
+
+{#    <div class="container">#}
+{#        <div class="row">#}
+{#            <div class="col-2">#}
+{##}
+{#            </div>#}
+{##}
+{#            <div class="col-7">#}
+{#                <h2 class="text-center">Post Report</h2>#}
+{#                {% if not user.is_authenticated %}#}
+{#                    <p>Please sign in or register to be able to post reports.</p><hr>#}
+{#                {% endif %}#}
+{#                <form method="post" class="post-form" enctype="multipart/form-data">#}
+{#                    {% csrf_token %}#}
+{#                    <table border="0">{{ form.as_table }}</table>#}
+{#                    <button type="submit" class="btn btn-success">Submit</button>#}
+{#                </form>#}
+{#            </div>#}
+{##}
+{#            <div class="col-3">#}
+{##}
+{#            </div>#}
+{#        </div>#}
+{#    </div>#}
 
 {% endblock %}
