Fixed buttons for sign up page

--- a/search/templates/search/homepage.html
+++ b/search/templates/search/homepage.html
@@ -34,13 +34,9 @@
             <hr>
         {% endfor %}
     </div>
-
-    <!-- Footer -->
-    <footer class="py-5 bg-dark">
-        <div class="container">
-            <p class="m-0 text-center text-white">Copyright &copy; Your Website 2018</p>
-        </div>
-        <!-- /.container -->
-    </footer>
-
+    <footer class="py-5 bg-dark footer">
+    <div class="container">
+        <p class="m-0 text-center text-white">Copyright &copy; CSC648-848 Section 2 Spring 2018 Team 13</p>
+    </div>
+</footer>
 {% endblock %}
