--- a/search/templates/search/base_generic.html
+++ b/search/templates/search/base_generic.html
@@ -32,20 +32,17 @@
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
+</head>
 
-
-    <!-- Header template for every pages -->
+<body>
+<header>
     <div class="container-fluid">
         <div class="row align-items-center">
             <div class="col-sm">
-                <a href="{% url 'search:index' %}"><img src="{% static "search/Park Report.png" %}"
-                    style="float: left"/></a>
+                <a href="{% url 'search:index' %}"><img src="{% static "search/Park Report.png" %}" style="float: left"/></a>
             </div>
-
-            <div class="col-sm">
-                SFSU Software Engineering Project, Spring 2018<br>
-                <p>Our website is dedicated to solving any and all environmental issues in your
-                local parks!</p>
+            <div class="col-sm">SFSU Software Engineering Project, Spring 2018<br>
+                <p>Our website is dedicated to solving any and all environmental issues in your local parks!</p>
                 {% if error %}
                     <p>{{ error }}</p>
                 {% endif %}
@@ -53,13 +50,7 @@
             <div class="col-sm"></div>
         </div>
     </div>
-    <!-- End of Header template for every pages -->
-
-
-
-</head>
-
-<body>
+</header>
 
 <!-- Navigation bar-->
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark justify-content-between">
@@ -113,6 +104,5 @@
     </div>
 </nav>
 {% block content %}{% endblock %}
-
 </body>
 </html>
